--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script>
- var firebaseConfig = {
-  apiKey: "AIzaSyA3hEHMZHasCxdXtY2dgwWoRx-s6eCpc3g",
-  authDomain: "real-time-database-25fb0.firebaseapp.com",
-  projectId: "real-time-database-25fb0",
-  storageBucket: "real-time-database-25fb0.appspot.com",
-  messagingSenderId: "491289972342",
-  appId: "1:491289972342:web:c10905ba65fc5270e9d957"
+const firebaseConfig = {
+  apiKey: "AIzaSyAdEFv_rbsmPCyiKTnZpffGebCtg6Wc9XQ",
+  authDomain: "balloon-d4ec6.firebaseapp.com",
+  databaseURL: "https://balloon-d4ec6-default-rtdb.firebaseio.com",
+  projectId: "balloon-d4ec6",
+  storageBucket: "balloon-d4ec6.appspot.com",
+  messagingSenderId: "909376533147",
+  appId: "1:909376533147:web:db2c44d7fd84e7b09d4c3e"
 };
-
+    </script>
 // Initialize Firebase
-firebase. initializeApp(firebaseConfig);
-</script>
+const app = initializeApp(firebaseConfig);
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <meta charset="utf-8">
