--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script>
-const firebaseConfig = {
+var firebaseConfig = {
   apiKey: "AIzaSyAdEFv_rbsmPCyiKTnZpffGebCtg6Wc9XQ",
   authDomain: "balloon-d4ec6.firebaseapp.com",
   databaseURL: "https://balloon-d4ec6-default-rtdb.firebaseio.com",
@@ -24,7 +24,7 @@ const firebaseConfig = {
 };
     </script>
 // Initialize Firebase
-const app = initializeApp(firebaseConfig);
+firebase.initializeApp(firebaseConfig);
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <meta charset="utf-8">
